--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,5 +1,17 @@
 .homepage {
-  height: 100vh;
+  min-height: calc(100vh - 150px); /* 150px is the navbar height */
   width: 100vw;
   background-color: rgb(214, 211, 255);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 0; /* Remove any default margin */
+  padding-top: 20px; /* Add a small space below the navbar */
+}
+
+.slideshow {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
