--- a/portfolio/src/components/Card.css
+++ b/portfolio/src/components/Card.css
@@ -1,6 +1,7 @@
 .card {
   margin: 20px 20px;
-  background-color: rgb(145, 137, 251);
+  background-color: #ffffff;
+  color: #222222;
   display: flex;
   flex-direction: row;
   max-width: 1000px;
@@ -25,6 +26,7 @@
   font-weight: bold;
   margin: 16px 0 8px 0;
   text-align: center;
+  color: #384e90;
 }
 
 .skills-list {
@@ -70,6 +72,8 @@
   flex-direction: column;
   align-items: center;
   text-decoration: none;
+  font-weight: bold;
+  color: #22356f;
 }
 
 .project-icon {
@@ -79,7 +83,7 @@
 }
 
 .project-name {
-  color: #222;
+  color: #22356f;
   font-size: 16px;
   text-align: center;
 }
