--- a/portfolio/src/components/Card.css
+++ b/portfolio/src/components/Card.css
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: column;
   margin: 30px 30px;
-  padding-bottom: 35px;
+
 }
 
 .card-left img {
@@ -40,14 +40,13 @@
 .card-right {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   justify-content: flex-start;
-  margin: 0 30px;
-  margin-bottom: 20px;
+  padding: 20px 20px;
 }
 
 .card-right h2 {
-  margin-top: 20px;
-  margin-bottom: 0;
+  margin: 0;
   color: #22356f;
 }
 
@@ -68,10 +67,13 @@
 }
 
 .projects-list {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-evenly;
   gap: 24px;
-  margin-top: 16px;
+  margin-top: 40px;
 }
 
 .project-link {
