remove: comments for cleaner code

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -18,10 +18,10 @@
 }
 
 .slideshow button {
-  background-color: #384e90; /* matcha din accentfärg */
+  background-color: #384e90;
   color: white;
   border: none;
-  border-radius: 50%; /* gör dem runda */
+  border-radius: 50%; 
   width: 50px;
   height: 50px;
   font-size: 1.5rem;
